Visual and Animation updates

--- a/projects.html
+++ b/projects.html
@@ -31,9 +31,10 @@
 <div class = "main-content">
     <h1>My Projects</h1>
     <div class="project-container">
+
+        <div class="project-year visible-content"> 2024 </div>
         <!-- Project Item 1 -->
-        <div class="project-year"> 2024 </div>
-        <div class="project-item">
+        <div class="project-item visible-content">
             <div class="project-content">
                 <div class="project-title">Portfolio Website</div>
                 <div class="project-skills">
@@ -63,9 +64,10 @@
             <img src="/Media/website.png" alt="Project Image">
         </div>
         </div>
+
+        <div class="project-year hidden-content"> 2023 </div>
         <!-- Project Item 2 -->
-        <div class="project-year"> 2023 </div>
-        <div class="project-item">
+        <div class="project-item hidden-content">
             <div class="project-content">
                 <div class="project-title">SQLI Detection using AI</div>
                 <div class="project-skills">
@@ -94,9 +96,9 @@
             </div>
         </div>
 
-        <div class="project-year"> 2022 </div>
+        <div class="project-year hidden-content"> 2022 </div>
         <!-- Project Item 3 -->
-        <div class="project-item">
+        <div class="project-item hidden-content">
             <div class="project-content">
                 <div class="project-title">Flappy Bird C++</div>
                 <div class="project-skills">
@@ -120,8 +122,9 @@
                 <img src="/Media/FlappyCPP.png" alt="Project Image">
             </div>
         </div>
+
         <!-- Project Item 4 -->
-        <div class="project-item">
+        <div class="project-item hidden-content">
             <div class="project-content">
                 <div class="project-title">Hospital Management System</div>
                 <div class="project-skills">
