--- a/resume.html
+++ b/resume.html
@@ -46,7 +46,7 @@
         <h2>Experience</h2>
 
         <!-- Timeline Item 1 -->
-        <div class="timeline-item">
+        <div class="timeline-item hidden-content">
             <div class="timeline present">
                 <p class="date end-date present">Present</p>
                 <p class="date start-date">Apr 2023</p>
@@ -70,7 +70,7 @@
         </div>
 
         <!-- Timeline Item 2 -->
-        <div class="timeline-item">
+        <div class="timeline-item hidden-content">
             <div class="timeline">
 
                 <p class="date start-date">Dec 2022</p>
@@ -93,7 +93,7 @@
         </div>
 
         <!-- Timeline Item 3 -->
-        <div class="timeline-item">
+        <div class="timeline-item hidden-content">
             <div class="timeline">
 
                 <p class="date start-date">Sep 2021</p>
