--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
     <h3> <a href="Media/Resume-AndrewDiGeronimo.pdf" target="_blank" class="download-button">Download full resume</a></h3>
 
     <h2 class="education-heading">Education</h2>
-    <h3 class="education-subheading">Fairleigh Dickinson Univeristy</h3>
+    <h3 class="education-subheading">Fairleigh Dickinson University</h3>
     <h4 class="education-details">Metropolitan campus</h4>
     <p class="education-details">Teaneck, NJ</p>
     <p class="graduation-date">May 2023</p>
