--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,44 @@
         <!-- Project Item 1 -->
         <div class="project-item visible-content">
             <div class="project-content">
+                <div class="project-title">HueVision</div>
+                <div class="project-skills">
+                    <span class="skill swift">Swift</span>
+                    <span class="skill api">API</span>
+                    <span class="skill vision">Vision Pro</span>
+                </div>
+
+                <div class="project-description">
+                    <ul>
+                        <li>I built an app designed around the the spatial VisionOS interface to control Philips Hue lights using Apple Vision pro. </li>
+                        
+                        <li>
+                        Multiple instanced of lights can be opened at one time and can be placed spatially around the house.
+                        </li>
+
+                        <li>
+                            Features:
+                            <ul>
+                                <li>Hue Bridge discovery and pairing.</li>
+                                <li>Secure API credential saving in Keychain once initial connection is made.</li>
+                                <li>Responsive UI designed using a MVC architecture pattern.</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        <div class="project-image">
+            <img id="projectThumbnail" src="/Media/visionAppIcon.png" alt="Project Image">
+            <!-- Container for video; initially hidden -->
+            <div id="projectVideo" style="display: none;">
+                <source src="/Media/Appdemo.m4v" type="video/mp4">
+            </div>
+        </div>
+        </div>
+
+        <!-- Project Item 2 -->
+        <div class="project-item visible-content">
+            <div class="project-content">
                 <div class="project-title">Portfolio Website</div>
                 <div class="project-skills">
                     <span class="skill html">HTML</span>
@@ -66,13 +104,13 @@
         </div>
 
         <div class="project-year hidden-content"> 2023 </div>
-        <!-- Project Item 2 -->
+        <!-- Project Item 3 -->
         <div class="project-item hidden-content">
             <div class="project-content">
                 <div class="project-title">SQLI Detection using AI</div>
                 <div class="project-skills">
                     <span class="skill python">Python</span>
-                    <span class="skill">API</span>
+                    <span class="skill api">API</span>
                 </div>
                 <div class="project-repo"><a href="https://github.com/AndrewDiGeronimo/sqliOpenAPI" target="_blank">https://github.com/AndrewDiGeronimo/sqliOpenAPI</a></div>
                 <div class="project-description">
@@ -97,7 +135,7 @@
         </div>
 
         <div class="project-year hidden-content"> 2022 </div>
-        <!-- Project Item 3 -->
+        <!-- Project Item 4 -->
         <div class="project-item hidden-content">
             <div class="project-content">
                 <div class="project-title">Flappy Bird C++</div>
@@ -123,7 +161,7 @@
             </div>
         </div>
 
-        <!-- Project Item 4 -->
+        <!-- Project Item 5 -->
         <div class="project-item hidden-content">
             <div class="project-content">
                 <div class="project-title">Hospital Management System</div>
