--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
                     <div class="text-content">
                     <p>I am a recent graduate from Fairleigh Dickinson University with a Masters in computer science.</p>
                     <p> I currently work at Apple as a Technical Specialist.</p>
+                    <p> Feel free to explore my website where you'll find my resume, my project portfolio, and contact information.</p>
                     </div>
                 </div>
-                <h4>I invite you to explore my website where you'll find my resume, my project portfolio, and contact information. 
-                <h4>Thank you for your visit!</h4>
         </body>
     </div>
 </div>
