--- a/projects.html
+++ b/projects.html
@@ -45,10 +45,10 @@
 
                 <div class="project-description">
                     <ul>
-                        <li>I built an app designed around the the spatial VisionOS interface to control Philips Hue lights using Apple Vision pro. </li>
+                        <li>I built an app designed around the spatial VisionOS interface to control Philips Hue lights using Apple Vision Pro. </li>
                         
                         <li>
-                        Multiple instanced of lights can be opened at one time and can be placed spatially around the house.
+                        Multiple instances of lights can be opened at one time and can be placed spatially around the house.
                         </li>
 
                         <li>
@@ -56,7 +56,7 @@
                             <ul>
                                 <li>Hue Bridge discovery and pairing.</li>
                                 <li>Secure API credential saving in Keychain once initial connection is made.</li>
-                                <li>Responsive UI designed using a MVC architecture pattern.</li>
+                                <li>Responsive UI designed using an MVC architecture pattern.</li>
                             </ul>
                         </li>
                     </ul>
